# task-manager

./: Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-128c35d1d1b9ac39ba1e441ac986cef0187c821bbaf7d484de295b3f503b4a6f.json  query-2f9545d43744f6d163f677e8cdb3d25b415e5070b8f7e94b12852be661a330a6.json  query-3246dff5fdfa7c1602e9b0386268330163c57edb68a0b2061505cc1f7abd8109.json  query-f9464bf91dccc9202e75f53d2dbb6bf0b1b327298770c2c56c05583e13a5fffa.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  error.rs  lib.rs  models.rs  repository.rs
crates/core/tests/: tests.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
migrations/: 20260706131850_init.sql  20260708085613_tasks.sql  20260708085756_notes.sql
