[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/daemon"]

[workspace.dependencies]
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }