[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
dotenvy = { workspace = true }
comfy-table = "7.2.2"
 