[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taskd"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
notify-rust = "4"